# jianai

./: .gitignore  README.md
jianai/: Cargo.toml
jianai/migrations/2023-11-10-122119_create_tags/: up.sql
jianai/migrations/2023-11-10-130252_create_images/: up.sql
jianai/migrations/2023-11-28-054733_create_segments/: down.sql  up.sql
jianai/src/: app_state.rs  cli.rs  handlers.rs  main.rs  model.rs  schema.rs  segmenting.rs  types.rs
