[package]
name = "jianai"
version = "2014.4.11"
edition = "2021"


[dependencies]
rocket = { version = "*" }
derivative = { version = "*" }
anyhow = { version = "*" }
clap = { version = "*", features = ["derive", "env"] }
tokio = { version = "*", features = ["full"] }
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
byteorder = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
percent-encoding = { version = "*" }
gethostname = { version = "*" }
sha3 = { version = "*" }
redis = { version = "*", features = ["tokio-comp", "aio", "cluster-async"] }
redis_pool = { version = "*" }
diesel = { version = "*", features = [
    "postgres",
    "postgres_backend",
    "serde_json",
] }
diesel-async = { version = "*", features = ["bb8", "postgres"] }
async-recursion = { version = "*" }
### segment
ort = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.1", default-features = false, features = [
    "load-dynamic",
    "ndarray",
] }
image = { version = "*" }
ndarray = { version = "*" }
ordered-float = { version = "*" }
### segment
